# sen2agri-processors_new

./: .gitignore  1.xt  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/ComputeConfusionMatrixMulti/: CMakeLists.txt  otbComputeConfusionMatrixMulti.cxx
Common/CropMaskImageClassifier/: CMakeLists.txt  CropMaskImageClassifier.cpp
Common/CropMaskTrainImagesClassifier/: CMakeLists.txt  otbTrainImagesClassifier.cxx
Common/CropTypeImageClassifier/: CMakeLists.txt  CropTypeImageClassifier.cpp
Common/CropTypeTrainImagesClassifier/: CMakeLists.txt  otbTrainImagesClassifier.cxx
Common/Filters/: CropMaskPreprocessing.h  CropTypePreprocessing.h  DataSmoothingFilter.h
Common/MultiModelImageClassifier/: CMakeLists.txt  otbMultiModelImageClassifier.cxx
Common/NDVISeries/: CMakeLists.txt  NDVISeries.cpp
Common/TimeSeriesReader/: TimeSeriesReader.cpp  TimeSeriesReader.h
Common/TrainImagesClassifierNew/: CMakeLists.txt  otbTrainBoost.cxx  otbTrainDecisionTree.cxx  otbTrainGradientBoostedTree.cxx  otbTrainImagesClassifier.cxx  otbTrainImagesClassifier.h  otbTrainKNN.cxx  otbTrainLibSVM.cxx  otbTrainNeuralNetwork.cxx  otbTrainNormalBayes.cxx  otbTrainRandomForests.cxx  otbTrainSVM.cxx
Common/XMLStatistics/: CMakeLists.txt  XMLStatistics.cpp
ContinuousColorMapping/: CMakeLists.txt  ContinuousColorMapping.cxx
CropMask/: CMakeLists.txt
CropMask/Erosion/: CMakeLists.txt  Erosion.cpp
CropMask/SpectralFeaturesExtraction/: CMakeLists.txt  SpectralFeaturesExtraction.cpp
CropType/: CMakeLists.txt
scripts/: CropMaskFused.py  CropTypeFused.py  aggregate_tiles.py  convert2tiff.py  sen2agri_common.py  validity_checker.py
(+73 files in other folders)
